#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(libgeodecomp_external_autotools_demo, 1.0, gentryx@gmx.de)
AM_INIT_AUTOMAKE([1.9 foreign])

AC_CONFIG_SRCDIR([main.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
PKG_CHECK_MODULES([LIBGEODECOMP], [libgeodecomp])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
